--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "command-line-args": "^5.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "http-status-codes": "^1.4.0"
+    "http-status-codes": "^1.4.0",
+    "mongoose": "^5.8.12"
   },
   "devDependencies": {
     "@types/command-line-args": "^5.0.0",
@@ -20,8 +21,12 @@
     "@types/find": "^0.2.1",
     "@types/jasmine": "^3.5.3",
     "@types/jsonfile": "^5.0.0",
+    "@types/mongoose": "^5.7.1",
     "@types/node": "^13.7.1",
     "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "eslint": "^6.8.0",
     "find": "^0.3.0",
     "fs-extra": "^8.1.0",
     "jasmine": "^3.5.0",
@@ -30,7 +35,6 @@
     "supertest": "^4.0.2",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
-    "tslint": "^6.0.0",
     "typescript": "^3.7.5"
   }
 }
