--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,7 @@
         "test": "nodemon --config nodemon.test.json"
     },
     "dependencies": {
-        "command-line-args": "^5.1.1",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "http-status-codes": "^1.4.0",
-        "mongoose": "^5.8.12"
-    },
-    "devDependencies": {
+        "@types/bcrypt": "^3.0.0",
         "@types/command-line-args": "^5.0.0",
         "@types/express": "^4.17.2",
         "@types/find": "^0.2.1",
@@ -24,6 +18,14 @@
         "@types/mongoose": "^5.7.1",
         "@types/node": "^13.7.1",
         "@types/supertest": "^2.0.8",
+        "bcrypt": "^3.0.8",
+        "command-line-args": "^5.1.1",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "http-status-codes": "^1.4.0",
+        "mongoose": "^5.8.12"
+    },
+    "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^2.19.2",
         "@typescript-eslint/parser": "^2.19.2",
         "eslint": "^6.8.0",
