--- a/server/package.json
+++ b/server/package.json
@@ -10,20 +10,23 @@
     },
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
-        "@types/command-line-args": "^5.0.0",
         "@types/express": "^4.17.2",
+        "@types/express-session": "^1.15.16",
         "@types/find": "^0.2.1",
-        "@types/jasmine": "^3.5.3",
         "@types/jsonfile": "^5.0.0",
         "@types/mongoose": "^5.7.1",
         "@types/node": "^13.7.1",
+        "@types/passport": "^1.0.2",
+        "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.8",
         "bcrypt": "^3.0.8",
-        "command-line-args": "^5.1.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-session": "^1.17.0",
         "http-status-codes": "^1.4.0",
-        "mongoose": "^5.8.12"
+        "mongoose": "^5.8.12",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^2.19.2",
@@ -31,7 +34,6 @@
         "eslint": "^6.8.0",
         "find": "^0.3.0",
         "fs-extra": "^8.1.0",
-        "jasmine": "^3.5.0",
         "jsonfile": "^5.0.0",
         "nodemon": "^2.0.2",
         "supertest": "^4.0.2",
