--- a/server/package.json
+++ b/server/package.json
@@ -14,19 +14,17 @@
         "@types/express-session": "^1.15.16",
         "@types/find": "^0.2.1",
         "@types/jsonfile": "^5.0.0",
+        "@types/jsonwebtoken": "^8.3.7",
         "@types/mongoose": "^5.7.1",
         "@types/node": "^13.7.1",
-        "@types/passport": "^1.0.2",
-        "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.8",
         "bcrypt": "^3.0.8",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
         "http-status-codes": "^1.4.0",
-        "mongoose": "^5.8.12",
-        "passport": "^0.4.1",
-        "passport-local": "^1.0.0"
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.8.12"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^2.19.2",
