--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -21,9 +21,8 @@
     },
     "include": [
         "src/**/*.ts",
-        "spec/**/*.ts"
     ],
     "exclude": [
-        "src/public/"
+        "src/public/",
     ]
 }
