--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
         "lint": "tslint --project \"tsconfig.json\"",
         "start": "node -r module-alias/register ./dist",
         "start:dev": "nodemon --config nodemon.json",
-        "test": "nodemon --config nodemon.test.json"
+        "test": "nodemon --config nodemon.test.json",
+        "populate": "ts-node src/db/populate.ts"
     },
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
