--- a/client/package.json
+++ b/client/package.json
@@ -8,11 +8,13 @@
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "@types/jest": "^24.0.0",
+        "@types/jsonwebtoken": "^8.3.8",
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
         "@types/react-router": "^5.1.4",
         "@types/react-router-dom": "^5.1.3",
+        "jsonwebtoken": "^8.5.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-router": "^5.1.2",
