--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "allsvenskan-betting-app",
+    "name": "betting-app",
     "version": "0.1.0",
     "private": true,
     "proxy": "http://localhost:8000",
