--- a/server/package.json
+++ b/server/package.json
@@ -19,15 +19,13 @@
         "@types/mongoose": "^5.7.1",
         "@types/node": "^13.7.1",
         "@types/supertest": "^2.0.8",
-        "@types/uuid": "^7.0.0",
         "bcrypt": "^3.0.8",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.0",
         "http-status-codes": "^1.4.0",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.8.12",
-        "uuid": "^7.0.1"
+        "mongoose": "^5.8.12"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^2.19.2",
