--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
         "start": "node -r module-alias/register ./dist",
         "start:dev": "nodemon --config nodemon.json",
         "test": "nodemon --config nodemon.test.json",
-        "populate": "ts-node src/db/populate.ts"
+        "populate": "ts-node src/db/populate.ts",
+        "create-admin": "ts-node src/db/admin.ts"
     },
     "dependencies": {
         "@types/bcrypt": "^3.0.0",
